--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app" style="width: 100vw; height:100vh; overflow: hidden;"></div>
+    <div id="app" style="overflow: hidden;"></div>
     <!-- built files will be auto injected -->
 </body>
 
